add content children

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,9 @@
 <header class="app-header">
    <div class="logo">
-     <img class="logo__icon">
-     <p>ASSET SHELL/FAST TRACK</p>
+     <img class="logo__icon" alt="logo">
+     <span class="logo__name">ASSET SHELL/FAST TRACK</span>
+   </div>
+   <div class="user">
+      <span class="user__name">Ivan Ivanov</span>
    </div>
 </header>
