--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>{{ title }}</h1>
 <app-header></app-header>
-<route-outlet></route-outlet>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
