--- a/src/app/core/pages/home/playList/playList.component.html
+++ b/src/app/core/pages/home/playList/playList.component.html
@@ -1,3 +1,4 @@
-<app-header-element></app-header-element>
-<ng-content></ng-content>
-<app-footer-element></app-footer-element>
+<div class="app-play-list">
+  <app-header-element [data]="data"></app-header-element>
+  <app-body [data]="data"></app-body>
+</div>
