--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="app-header">
    <div class="logo">
-     <img class="logo__icon" alt="logo">
+     <img class="logo__icon" alt="logo" src="../../assets/image/logo.jpg">
      <span class="logo__name">ASSET SHELL/FAST TRACK</span>
    </div>
    <div class="user">
