--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="navigation">
+        <a class="navigation__link" routerLink="/home">Home</a>
+</div>
+<div class="wrapper">
+        <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
