--- a/src/app/core/pages/release/release.component.scss
+++ b/src/app/core/pages/release/release.component.scss
@@ -1,8 +1,67 @@
 @import '../../../../assets/style/mixin.scss';
 @import '../../../../assets/style/variables.scss';
 
+
 .app-release {
     background: $color-grey;
-    width: $card-width;
-    @include border(1px, $color-black);
+    padding: 15px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    &-wrapper-info {
+        padding-left: 15px;
+    }
+
+    &-icon {
+        width: 200px;
+        height: 200px;
+        background: url(../../../../assets/image/noimage.gif) no-repeat;
+        background-size: cover; 
+    }
+
+    &__main-artists--title{
+        margin: 5px 0;
+    }
+    &__title {
+        margin: 10px 0;
+    }
+
+    .list-featured-artists {
+        padding: 0;
+
+        &__feat {
+            font-style: italic;
+            font-size: 13px;
+        }
+
+        &__artist {
+            display: inline-block;
+            list-style-type: none;
+            padding: 0;
+            font-style: italic;
+            font-size: 13px;
+        }
+    }
+
+    .list-genres {
+        padding: 20px 0;
+
+        &__genre {
+            display: inline-block;
+            list-style-type: none;
+            width: 80px;
+            @include border(1px, $color-black);
+            margin-right: 5px;
+            height: 25px;
+            background: $color-light-grey;
+            text-align: center;
+            line-height: 25px;
+            text-transform: uppercase;
+
+        }
+    }
+    &__coop{
+        padding: 10px 0;
+    }
 }
