--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,4 +3,24 @@
 
 .app-header {
     @include border(1px, $color-grey);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+
+    .logo {
+        
+        display: flex;
+        align-items: center;
+        &__icon {
+            width: 50px;
+            height: 50px;
+        }
+
+        &__name {
+            font-weight: bold; 
+        }
+    }
 }
