--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,5 +1,10 @@
 $color-white: #ffffff;
-$color-grey: #e1e1e1;
+$color-grey: #d6dce3;
 $color-black: #000000;
-
-$card-width: 350px;
+$color-dark-grey: #3f3f3f;
+$color-light-grey: #f2f2f2;
+$color-red: #ff0000;
+$color-yellow: #ffff00;
+$card-width: 600px;
+$card-height: 291px;
+$font-stack: Helvetica, sans-serif;
